scripts/ingress/bank-app-bank-front-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bank-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-app-bank-front-ui
                port:
                  number: 80
