scripts/ingress/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bank-keycloak.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-app-keycloak
                port:
                  number: 8080
