scripts/ingress/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bank-postgres.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-app-postgres
                port:
                  number: 5432
